--- a/company-management-frontend/src/app/components/company-list/company-list.component.html
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z2">
     <table mat-table [dataSource]="dataSource">
 
         <!-- Company No Column -->
@@ -14,9 +14,9 @@
         </ng-container>
 
         <!-- Industry Column -->
-        <ng-container matColumnDef="industryId">
+        <ng-container matColumnDef="industryName">
             <th mat-header-cell *matHeaderCellDef> Industry </th>
-            <td mat-cell *matCellDef="let element"> {{element.industryId}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.industryName}} </td>
         </ng-container>
 
         <!-- Total Employees Column -->
