--- a/company-management-frontend/src/app/app.component.scss
+++ b/company-management-frontend/src/app/app.component.scss
@@ -1,7 +1,4 @@
 .container {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    height: 100vh;
-    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
