--- a/company-management-frontend/src/app/components/company-save/company-save.component.html
+++ b/company-management-frontend/src/app/components/company-save/company-save.component.html
@@ -1,1 +1,62 @@
-<p>company-save works!</p>
+<form (ngSubmit)="onFormSubmit($event)" [formGroup]="companyForm">
+
+    <div>
+        <mat-form-field hintLabel="Only alphanumeric and max 50 characters">
+            <mat-label>Enter company name</mat-label>
+            <input matInput #input maxlength="50" placeholder="" required="" formControlName="companyName">
+            <mat-hint align="end">{{input.value.length}}/50</mat-hint>
+            @if (companyForm.controls['companyName'].invalid) {
+            <mat-error>{{getErrorMessage()}}</mat-error>
+            }
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field>
+            <mat-label>Industry</mat-label>
+            <mat-select formControlName="industry" required>
+                <mat-option [value]="0">Please Select</mat-option>
+                @for (industry of industryList; track industry;) {
+                <mat-option [value]="industry.id">{{industry.name}}</mat-option>
+                }
+            </mat-select>
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field hintLabel="Must be greater than 0 and less than 1 million">
+            <mat-label>Enter number of employees</mat-label>
+            <input matInput #input type="number" formControlName="employeeCount">
+            @if (companyForm.controls['employeeCount'].invalid) {
+            <mat-error>{{getErrorMessage()}}</mat-error>
+            }
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field hintLabel="Only alphabets and hyphen and max 50 characters">
+            <mat-label>Enter city</mat-label>
+            <input matInput #input formControlName="city">
+            @if (companyForm.controls['city'].invalid) {
+            <mat-error>{{getErrorMessage()}}</mat-error>
+            }
+        </mat-form-field>
+    </div>
+
+    <div>
+        <mat-form-field>
+            <mat-label>Select parent company</mat-label>
+            <mat-select formControlName="parentCompany">
+                <mat-option [value]='"None"'>None</mat-option>
+                @for (comp of companyList; track comp;) {
+                <mat-option [value]="comp.name">{{comp.name}}</mat-option>
+                }
+            </mat-select>
+        </mat-form-field>
+    </div>
+
+    <div>
+        <button mat-raised-button color="primary" type="submit" class="mr-5" [disabled]="!companyForm.valid">Save</button>
+        <button mat-raised-button (click)="cancel()">Cancel</button>
+    </div>
+</form>
