--- a/company-management-frontend/src/app/components/company-list/company-list.component.html
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.html
@@ -1,9 +1,12 @@
+@if (isLoadingResults === true) {
+    <mat-spinner></mat-spinner>
+}
 @if (dataSource.data.length <= 0) { <div>
     No companies found
     </div>
     } @else {
     <div id="table" class="mat-elevation-z4">
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="companyName" matSortDirection="asc" (matSortChange)="announceSortChange($event)">
 
             <!-- Company No Column -->
             <ng-container matColumnDef="companyNo">
@@ -13,7 +16,8 @@
 
             <!-- Company Name Column -->
             <ng-container matColumnDef="companyName">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by company name" disableClear> Name
+                </th>
                 <td mat-cell *matCellDef="let element"> {{element.companyName}} </td>
             </ng-container>
 
@@ -50,6 +54,9 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedRow(row)"></tr>
         </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 15]" [length]="totalCount" showFirstLastButtons="false" (page)="pageChanged($event)">
+        </mat-paginator>
     </div>
     }
 
