feat: add the search filter

--- a/company-management-frontend/src/app/components/company-list/company-list.component.html
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.html
@@ -1,3 +1,5 @@
+<app-company-search-filter [companyNo]="companyNo" [companyName]="companyName" [industryId]="industryId" [city]="city" [parentCompany]="parentCompany" [totalEmployees]="totalEmployees"></app-company-search-filter>
+
 @if (isLoadingResults === true) {
     <mat-spinner></mat-spinner>
 }
