--- a/company-management-frontend/src/styles.scss
+++ b/company-management-frontend/src/styles.scss
@@ -1,19 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@picocss/pico/scss/pico";
 
-html,
-body {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-
-    .ml-5 {
-        margin-left: 5px;
-    }
-
-    .mr-5 {
-        margin-right: 5px;
-    }
-}
