chore: Update the company list screen.

--- a/company-management-frontend/src/app/components/company-list/company-list.component.scss
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.scss
@@ -1,7 +1,11 @@
-div#table {
-    overflow-x: auto;
-}
+article {
+    --block-spacing-vertical: 10px;
 
-a {
-    margin-top: 1.5em;
+    th {
+        --font-size: 16px;
+    }
+
+    td {
+        --font-size: 15px;
+    }
 }
