--- a/company-management-frontend/src/app/components/home-page/home-page.component.html
+++ b/company-management-frontend/src/app/components/home-page/home-page.component.html
@@ -11,6 +11,6 @@
         <input type="password" id="password" name="password" placeholder="Password" formControlName="password" required>
 
         <br /><br />
-        <button type="submit" [disabled]="this.loginForm.invalid">Login</button>
+        <button type="submit" class="secondary" [disabled]="this.loginForm.invalid">Login</button>
     </article>
 </form>
