--- a/company-management-frontend/src/app/components/company-list/company-list.component.html
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.html
@@ -1,66 +1,42 @@
-<app-company-search-filter [companyNo]="companyNo" [companyName]="companyName" [industryId]="industryId" [city]="city" [parentCompany]="parentCompany" [totalEmployees]="totalEmployees"></app-company-search-filter>
+<!-- <app-company-search-filter [companyNo]="companyNo" [companyName]="companyName" [industryId]="industryId" [city]="city"
+    [parentCompany]="parentCompany" [totalEmployees]="totalEmployees"></app-company-search-filter> -->
 
 @if (isLoadingResults === true) {
-    <div aria-busy="true"></div>
+<div aria-busy="true"></div>
 }
-@if (dataSource.data.length <= 0) { <div>
+@if (items.length <= 0) { <div>
     No companies found
     </div>
     } @else {
-    <div id="table" class="mat-elevation-z4">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="companyName" matSortDirection="asc" (matSortChange)="announceSortChange($event)">
-
-            <!-- Company No Column -->
-            <ng-container matColumnDef="companyNo">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.companyNo}} </td>
-            </ng-container>
-
-            <!-- Company Name Column -->
-            <ng-container matColumnDef="companyName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by company name" disableClear> Name
-                </th>
-                <td mat-cell *matCellDef="let element"> {{element.companyName}} </td>
-            </ng-container>
-
-            <!-- Industry Column -->
-            <ng-container matColumnDef="industryName">
-                <th mat-header-cell *matHeaderCellDef> Industry </th>
-                <td mat-cell *matCellDef="let element"> {{element.industryName}} </td>
-            </ng-container>
-
-            <!-- Total Employees Column -->
-            <ng-container matColumnDef="totalEmployees">
-                <th mat-header-cell *matHeaderCellDef> Total Employees </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalEmployees}} </td>
-            </ng-container>
-
-            <!-- City Column -->
-            <ng-container matColumnDef="city">
-                <th mat-header-cell *matHeaderCellDef> City </th>
-                <td mat-cell *matCellDef="let element"> {{element.city}} </td>
-            </ng-container>
-
-            <!-- Parent Company Column -->
-            <ng-container matColumnDef="parentCompany">
-                <th mat-header-cell *matHeaderCellDef> Parent Company </th>
-                <td mat-cell *matCellDef="let element"> {{element.parentCompany}} </td>
-            </ng-container>
-
-            <!-- Level Company Column -->
-            <ng-container matColumnDef="level">
-                <th mat-header-cell *matHeaderCellDef> Level </th>
-                <td mat-cell *matCellDef="let element"> {{element.level}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedRow(row)"></tr>
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 15]" [length]="totalCount" showFirstLastButtons="false" (page)="pageChanged($event)">
-        </mat-paginator>
-    </div>
+    <article>
+        <figure>
+            <table role="grid">
+                <thead>
+                    <th scope="col"><strong>No.</strong></th>
+                    <th scope="col"><strong>Name</strong></th>
+                    <th scope="col"><strong>Industry</strong></th>
+                    <th scope="col"><strong>Total Employees</strong></th>
+                    <th scope="col"><strong>City</strong></th>
+                    <th scope="col"><strong>Parent Company</strong></th>
+                    <th scope="col"><strong>Level</strong></th>
+                </thead>
+                <tbody>
+                    @for (item of items; track item.id;) {
+                    <tr scope="row">
+                        <td>{{item.companyNo}}</td>
+                        <td>{{item.companyName}}</td>
+                        <td>{{item.industryName}}</td>
+                        <td>{{item.totalEmployees}}</td>
+                        <td>{{item.city}}</td>
+                        <td>{{item.parentCompany}}</td>
+                        <td>{{item.level}}</td>
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </figure>
+    </article>
     }
 
 
-    <a mat-stroked-button routerLink="/save">New company</a>
+    <!-- <a role="button" routerLink="/save">New company</a> -->
