--- a/company-management-frontend/src/app/components/company-list/company-list.component.scss
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.scss
@@ -8,4 +8,19 @@ article {
     td {
         --font-size: 15px;
     }
+
+    .pagination {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        a {
+            // --line-height: 1.6;
+            // --form-element-spacing-vertical: 0.6rem;
+            margin: 3px 3px;
+            font-size: 0.8rem;
+            // font-weight: bold;
+            text-decoration: none;
+        }
+    }
 }
