chore: Finished the UI with pico

--- a/company-management-frontend/src/app/components/company-list/company-list.component.scss
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.scss
@@ -8,6 +8,10 @@ article {
     td {
         --font-size: 15px;
     }
+    
+    tr {
+        cursor: pointer;
+    }
 
     .pagination {
         display: flex;
