--- a/company-management-frontend/src/app/components/company-list/company-list.component.html
+++ b/company-management-frontend/src/app/components/company-list/company-list.component.html
@@ -1,5 +1,5 @@
-<!-- <app-company-search-filter [companyNo]="companyNo" [companyName]="companyName" [industryId]="industryId" [city]="city"
-    [parentCompany]="parentCompany" [totalEmployees]="totalEmployees"></app-company-search-filter> -->
+<app-company-search-filter [companyNo]="companyNo" [companyName]="companyName" [industryId]="industryId" [city]="city"
+    [parentCompany]="parentCompany" [totalEmployees]="totalEmployees"></app-company-search-filter>
 
 @if (isLoadingResults === true) {
 <span aria-busy="true"></span>
@@ -23,7 +23,7 @@
                 </thead>
                 <tbody>
                     @for (item of items; track item.id;) {
-                    <tr scope="row">
+                    <tr scope="row" [routerLink]="['/dashboard/save', { companyId: item.id }]">
                         <td>{{item.companyNo}}</td>
                         <td>{{item.companyName}}</td>
                         <td>{{item.industryName}}</td>
