--- a/company-management-frontend/src/app/components/company-search-filter/company-search-filter.component.scss
+++ b/company-management-frontend/src/app/components/company-search-filter/company-search-filter.component.scss
@@ -1,3 +1,13 @@
-div {
-    padding-top: 3%;
+article {
+    --block-spacing-horizontal: 1.3rem;
+    --block-spacing-vertical: 1rem;
+
+    label {
+        margin: 0;
+        font-size: 17px;
+
+        * option {
+            font-size: 16px;
+        }
+    }
 }
